fix: icono cuenta visible

--- a/static/style.css
+++ b/static/style.css
@@ -290,6 +290,10 @@ justify-content:center;
     transition:all .3s ease;
 }
 
+.login i{
+    color:#ffffff;
+}
+
 .login:hover{
     opacity:1;
 
